--- a/shared.css
+++ b/shared.css
@@ -51,3 +51,24 @@ header li {
     background-color: bisque;
     border-radius: 5px;
  }
+
+ footer {
+    background: linear-gradient(188deg, rgb(34, 19, 2), rgb(59, 34, 5));
+    padding: 20px;
+ }
+
+ footer ul {
+    display: flex;
+    justify-content: center;
+ }
+
+ footer li {
+    width: 50px;
+    height: 50px;
+    margin: 0 50px;
+ }
+
+ footer img {
+    width: 100%;
+    height: 100%;
+ }
