--- a/places.css
+++ b/places.css
@@ -1,13 +1,84 @@
 body {
-    background-color:  rgb(194, 177, 156);
+  background-color: rgb(209, 204, 198);
+  color: rgb(46, 46, 46);
 }
 
 header {
-    position: static;
+  position: static;
+}
+
+header nav a {
+    color: rgb(34, 19, 2);
+    border-radius: 5px;
+}
+
+header nav a:hover {
+    background-color: rgb(34, 19, 2);
+    color: rgb(224, 221, 15);
+    border-radius: 5px;
+}
+
+main ul {
+  width: 1250px;
+  margin: 0 auto 48px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+
+main li {
+  display: flex;
+  background-color: white;
+  box-shadow: 1px 1px 5px rgb(161, 159, 155);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+li:nth-of-type(3) {
+    grid-column: 1 / 3;
+}
+
+li:nth-of-type(10) {
+    grid-column: 1 / 3;
+}
+
+main p {
+    text-align: justify;
 }
 
 main li img {
-    width: 300px;
-    height: 280px;
+  width: 300px;
+  height: 280px;
+  object-fit: cover;
 }
 
+.item-content {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.item-content h2 {
+    margin: 0;
+}
+
+.actions {
+  text-align: right;
+}
+
+.actions a {
+  text-decoration: none;
+  background-color: rgb(34, 19, 2);
+  color: rgb(224, 221, 15);
+  border-radius: 5px;
+  font-weight: bolder;
+  padding: 5px;
+}
+
+.actions a:hover {
+  background-color: rgb(224, 221, 15);
+  color: rgb(34, 19, 2);
+  border-radius: 5px;
+  transition: 400ms;
+}
