--- a/shared.css
+++ b/shared.css
@@ -1,74 +1,74 @@
-body { 
-    font-family: 'Roboto Condensed', sans-serif;
-    margin: 0;
+body {
+  font-family: "Roboto Condensed", sans-serif;
+  margin: 0;
 }
 
-ul { 
-    list-style: none;
-    margin: 0;
-    padding: 0;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-#page-logo a { 
-    font-family: 'Caveat', cursive;
-    padding: 10px;
-    color: rgb(56, 30, 0);
-    text-decoration: none;
-    font-size: 45px;
-    text-shadow: 1px 1px 1px rgb(136, 136, 136);
+#page-logo a {
+  font-family: "Caveat", cursive;
+  padding: 10px;
+  color: rgb(56, 30, 0);
+  text-decoration: none;
+  font-size: 45px;
+  text-shadow: 1px 1px 1px rgb(136, 136, 136);
 }
 
 header {
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 60px;
-    position: absolute;
-    width: 100%;
-    box-sizing: border-box;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 60px;
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 header ul {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 header li {
-    margin-left: 20px; 
+  margin-left: 20px;
 }
 
- ul a {
-    text-decoration: none;
-    color: rgb(196, 149, 91);
-    font-size: 18px;
-    padding: 12px;
- }
+nav ul a {
+  text-decoration: none;
+  color: rgb(136, 106, 69);
+  font-size: 18px;
+  padding: 12px;
+}
 
- ul a:hover {
-    color: rgb(56, 30, 0);
-    transition: 400ms;
-    background-color: bisque;
-    border-radius: 5px;
- }
+nav ul a:hover {
+  color: rgb(224, 221, 15);
+  transition: 400ms;
+  background-color: rgb(34, 19, 2);
+  border-radius: 5px;
+}
 
- footer {
-    background: linear-gradient(188deg, rgb(34, 19, 2), rgb(59, 34, 5));
-    padding: 20px;
- }
+footer {
+  background: linear-gradient(188deg, rgb(34, 19, 2), rgb(59, 34, 5));
+  padding: 20px;
+}
 
- footer ul {
-    display: flex;
-    justify-content: center;
- }
+footer ul {
+  display: flex;
+  justify-content: center;
+}
 
- footer li {
-    width: 50px;
-    height: 50px;
-    margin: 0 50px;
- }
+footer li {
+  width: 40px;
+  height: 40px;
+  margin: 0 50px;
+}
 
- footer img {
-    width: 100%;
-    height: 100%;
- }
+footer img {
+  width: 100%;
+  height: 100%;
+}
