--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,95 @@
 #hero {
-    height: 800px;
-    background-image: url("/images/places/hd-wallpaper-1341536_1920.jpg");
-    background-position: center;
-    background-size: cover;
+  height: 800px;
+  background-image: url("/images/places/hd-wallpaper-1341536_1920.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 #hero-content {
-    width: 70%;
-    background-color: rgb(51, 47, 47, 0.5);
-    box-shadow: 2px 2px 10px rgb(48, 48, 48);
-    border-radius: 10px;
-    text-align: center;
-    padding: 50px 0px;
-    margin: 0 auto;
-    position: relative;
-    top: 200px;
+  width: 70%;
+  background-color: rgb(51, 47, 47, 0.5);
+  box-shadow: 2px 2px 10px rgb(48, 48, 48);
+  border-radius: 10px;
+  text-align: center;
+  padding: 50px 0px;
+  margin: 0 auto;
+  position: relative;
+  top: 200px;
 }
 
 #hero-content h1 {
-    color: white;
-    text-transform: uppercase;
-    font-size: 50px;
-    margin: 0;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: lighter;
+  color: white;
+  text-transform: uppercase;
+  font-size: 50px;
+  margin: 0;
+  font-family: "Quicksand", sans-serif;
+  font-weight: lighter;
 }
 
 #hero-content p {
-    color: white;
-    text-transform: uppercase;
-    font-size: 20px;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-    margin-bottom: 30px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
 #hero-content a {
-    text-decoration: none;
-    background-color: bisque;
-    padding: 10px 25px;
-    color: rgb(56, 30, 0);
-    font-size: 20px;
-    border-radius: 5px;
-    box-shadow: 1px 2px rgb(43, 43, 43);
+  text-decoration: none;
+  padding: 10px 25px;
+  background-color: rgb(34, 19, 2);
+  color: rgb(224, 221, 15);
+  font-size: 20px;
+  border-radius: 5px;
+  box-shadow: 1px 2px rgb(43, 43, 43);
 }
 
 #hero-content a:hover {
-    background-color: rgb(214, 175, 127);
-    transition: 400ms;
+  background-color: rgb(224, 221, 15);
+  color: rgb(34, 19, 2);
+  transition: 400ms;
 }
 
 #highlights {
-    padding: 24px;
-    background: linear-gradient(90deg, rgb(212, 200, 185), rgb(231, 225, 216));
+  padding: 24px;
+  background: linear-gradient(90deg, rgb(212, 200, 185), rgb(231, 225, 216));
 }
 
 #highlights h2 {
-    text-transform: uppercase;
-    text-align: center;
-    color: rgb(56, 30, 0);
-    font-weight: light;
-    letter-spacing: 3px;
+  text-transform: uppercase;
+  text-align: center;
+  color: rgb(56, 30, 0);
+  font-weight: light;
+  letter-spacing: 3px;
 }
 
 #destinations {
-    display: flex;
-    width: 90%;
-    margin: auto;
-    margin-bottom: 40px;
-    justify-content: center;
+  display: flex;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 40px;
+  justify-content: center;
 }
 
 .destination {
-    margin: 0 20px;
-    text-transform: uppercase;
+  margin: 0 20px;
+  text-transform: uppercase;
 }
 
 .destination img {
-    height: 80%;
-    width: 100%;
-    border-radius: 10px;
-    object-fit: cover;
+  height: 80%;
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
 }
 
 .destination p {
-    text-align: center;
-    font-size: large;
-    margin: 0 20px;
+  text-align: center;
+  font-size: large;
+  margin: 0 20px;
 }
 
 .destination strong {
-    color: rgb(196, 149, 91);
+  color: rgb(34, 19, 2);
 }
